--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "react-router-dom": "^6.17.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
